tree-sitter/grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        $.declaration_statement,
        $.if_statement,
        $.case_statement,
        $.while_statement,
        $.do_statement,
        $.loop_statement,
        $.at_statement,
        $.try_statement,
        $.class_forward_declaration,
        $.interface_forward_declaration,
        $.class_definition,
        $.class_implementation,
        $.interface_definition,
        $.method_signature,
        $.method_definition,
        $.form_definition,
        $.function_definition,
        $.module_definition,
        $.event_block,
        $.macro_definition,
        $.call_statement,
        $.describe_statement,
        $.delete_statement,
        $.update_statement,
        $.sort_statement,
        $.create_statement,
        $.add_statement,
        $.unpack_statement,
        $.sql_dml_statement,
        $.select_statement,
        $.submit_statement,
        $.set_pf_status_statement,
        $.set_titlebar_statement,
        $.exec_sql_statement,
        $.report_statement,
        $.include_statement,
        $.assign_statement,
        $.find_statement,
        $.assignment_statement,
        $.expression_statement,
        $.simple_statement,
        $.unknown_statement,
      ),

    identifier: (_) => token(/[A-Za-z_][A-Za-z0-9_]*/),
    field_symbol: (_) => token(/<[A-Za-z_][A-Za-z0-9_]*>/),
    field_symbol_path: (_) =>
      token(prec(1, /<[A-Za-z_][A-Za-z0-9_]*>(?:-[A-Za-z_][A-Za-z0-9_]*)+/)),
    field_path: (_) =>
      token(prec(1, /[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z_][A-Za-z0-9_]*)+/)),
    sql_wildcard_selector: (_) =>
      token(prec(1, /[A-Za-z_][A-Za-z0-9_]*~\*/)),
    static_type_path: (_) =>
      token(
        prec(
          1,
          /[A-Za-z_][A-Za-z0-9_]*(?:=>[A-Za-z_][A-Za-z0-9_]*)(?:-[A-Za-z_][A-Za-z0-9_]*)*/,
        ),
      ),
    dynamic_name: (_) => token(prec(1, /\([A-Za-z_][A-Za-z0-9_]*\)/)),

    _name: ($) =>
      choice(
        $.identifier,
        $.escaped_identifier,
        $.field_symbol,
        alias($._slash_identifier, $.identifier),
        $.cte_identifier,
      ),

    _argument_name: ($) =>
      choice(
        $._name,
        keywordIdentifierChoice($, COMPONENT_NAME_KEYWORDS),
      ),

    component_name: ($) =>
      prec(
        3,
        choice(
          $._name,
          keywordIdentifierChoice($, COMPONENT_NAME_KEYWORDS),
        ),
      ),

    routine_name: ($) => choice($.qualified_name, $.component_name),

    qualified_name: ($) =>
      prec.left(
        PREC.SELECTOR,
        seq(
          $._name,
          repeat(seq(choice("-", "->", "=>", "~"), $.component_name)),
        ),
      ),

    number: (_) => token(/\d+/),

    comment: ($) => choice($.line_comment, $.star_comment),

    line_comment: (_) => token(/"[^\r\n]*/),

    string: (_) =>
      choice(
        token(seq("'", repeat(choice(/[^'\r\n]/, "''")), "'")),
        token(seq("`", repeat(choice(/[^`\r\n]/, "``")), "`")),
      ),

    string_template: ($) =>
      seq(
        $.template_start,
        repeat(choice($.template_text, $.template_interpolation)),
        $.template_end,
      ),

    template_interpolation: ($) =>
      seq(
        $.template_interpolation_start,
        repeat($._template_token),
        $.template_interpolation_end,
      ),

    _template_token: ($) =>
      choice(
        $._expression,
        keywordChoice($, [
          "WIDTH",
          "ALIGN",
          "DECIMALS",
          "ALPHA",
          "DATE",
          "TIME",
          "TIMESTAMP",
          "CASE",
          "SIGN",
          "STYLE",
          "COUNTRY",
        ]),
        keywordChoice($, EXPRESSION_KEYWORDS),
        $.operator,
        $.template_punctuation,
      ),

    _literal: ($) => choice($.number, $.string, $.string_template),

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.selector_expression,
        $.interface_selector_expression,
        $.wildcard_selector_expression,
        $.call_expression,
        $.table_expression,
        $.substring_expression,
        $.constructor_expression,
        $.parenthesized_expression,
        $.host_expression,
        $.field_symbol_path,
        $.field_path,
        $.static_type_path,
        $.qualified_name,
        $._literal,
      ),

    host_expression: ($) => seq("@", field("value", $._expression)),

    parenthesized_expression: ($) =>
      seq("(", optional(seq($._expression, repeat(seq(",", $._expression)))), ")"),

    unary_expression: ($) =>
      prec.left(PREC.UNARY, seq(field("operator", choice("+", "-", keyword($, "NOT"))), field("operand", $._expression))),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq(field("left", $._expression), field("operator", keyword($, "OR")), field("right", $._expression))),
        prec.left(PREC.AND, seq(field("left", $._expression), field("operator", keyword($, "AND")), field("right", $._expression))),
        prec.left(PREC.COMPARE, seq(field("left", $._expression), field("operator", keyword($, "IS")), optional(field("negation", keyword($, "NOT"))), field("right", keywordChoice($, ["INITIAL", "BOUND", "ASSIGNED"])))),
        prec.left(PREC.COMPARE, seq(field("left", $._expression), field("operator", choice("=", "<>", "<", ">", "<=", ">=", keywordChoice($, ["EQ", "NE", "LT", "LE", "GT", "GE", "IS", "BETWEEN", "IN", "LIKE", "CO", "CN", "CA", "NA", "CS", "NS", "CP", "NP"]))), field("right", $._expression))),
        prec.left(PREC.CONCAT, seq(field("left", $._expression), field("operator", "&&"), field("right", $._expression))),
        prec.left(PREC.ADD, seq(field("left", $._expression), field("operator", choice("+", "-")), field("right", $._expression))),
        prec.left(PREC.MULTIPLY, seq(field("left", $._expression), field("operator", choice("*", "/", keyword($, "DIV"), keyword($, "MOD"))), field("right", $._expression))),
      ),

    selector_expression: ($) =>
      prec.left(
        PREC.SELECTOR,
        seq(
          field("object", $._expression),
          field("operator", choice("-", "->", "=>")),
          field("property", choice($.component_name, $.dynamic_component)),
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(field("function", choice($._expression, keywordChoice($, CALLABLE_KEYWORDS))), field("arguments", $.argument_list)),
      ),

    argument_list: ($) =>
      seq(
        "(",
        repeat(choice($.for_groups_clause, $.constructor_row, $.named_argument, $._expression, $._argument_token)),
        ")",
      ),

    for_groups_clause: ($) =>
      prec(
        PREC.CALL + 1,
        seq(
          keyword($, "FOR"),
          keyword($, "GROUPS"),
          field("group", $.component_name),
          keyword($, "OF"),
          field("item", $.component_name),
          keyword($, "IN"),
          field("source", $._expression),
          keyword($, "GROUP"),
          keyword($, "BY"),
          field("key", $._expression),
        ),
      ),

    _argument_token: ($) =>
      choice(
        $.static_type_path,
        $.unary_expression,
        $.selector_expression,
        $.interface_selector_expression,
        $.wildcard_selector_expression,
        $.call_expression,
        $.table_expression,
        $.substring_expression,
        $.constructor_expression,
        $.parenthesized_expression,
        $.host_expression,
        $.field_symbol_path,
        $.field_path,
        $.positional_name,
        $._literal,
        keywordChoice($, CONSTRUCTOR_ARGUMENT_KEYWORDS),
        $.operator,
        $.punctuation,
      ),

    named_argument: ($) =>
      prec(PREC.COMPARE + 1, seq(field("name", $._argument_name), $.equals, field("value", $._expression))),

    equals: (_) => token(prec(3, "=")),

    _argument_value: ($) =>
      choice(
        $.static_type_path,
        $.field_symbol_path,
        $.field_path,
        $.unary_expression,
        $.selector_expression,
        $.interface_selector_expression,
        $.wildcard_selector_expression,
        $.call_expression,
        $.table_expression,
        $.substring_expression,
        $.constructor_expression,
        $.parenthesized_expression,
        $.host_expression,
        $.qualified_name,
        $._literal,
      ),

    _substring_base: ($) => choice($.field_path, $.identifier),

    _immediate_number: (_) => token.immediate(/\d+/),

    substring_expression: ($) =>
      choice(
        prec(
          PREC.SUBSTRING,
          seq(
            field("base", $._substring_base),
            choice(
              seq(
                token.immediate("+"),
                field("offset", alias($._immediate_number, $.number)),
                optional(seq(
                  token.immediate("("),
                  field("length", alias($._immediate_number, $.number)),
                  token.immediate(")"),
                )),
              ),
              seq(
                token.immediate("("),
                field("length", alias($._immediate_number, $.number)),
                token.immediate(")"),
              ),
            ),
          ),
        ),
      ),

    constructor_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("constructor", keywordChoice($, ["VALUE", "NEW", "CONV", "COND", "SWITCH", "REDUCE", "FILTER", "CAST"])),
          choice(
            seq(field("type", choice("#", $.qualified_name, $.component_name)), field("arguments", $.argument_list)),
            field("arguments", $.argument_list),
          ),
        ),
      ),

    data_declaration: ($) => seq(keyword($, "DATA"), optional(":"), optional($._statement_tail), "."),
    parameters_declaration: ($) => seq(keywordChoice($, ["PARAMETERS", "PARAMETER"]), optional(":"), optional($._statement_tail), "."),
    if_statement: ($) =>
      seq(
        keyword($, "IF"),
        field("condition", $._statement_tail),
        ".",
        field("body", repeat($._statement)),
        repeat($.elseif_clause),
        optional($.else_clause),
        keyword($, "ENDIF"),
        ".",
      ),

    case_statement: ($) =>
      seq(
        keyword($, "CASE"),
        field("value", $._statement_tail),
        ".",
        repeat($.when_clause),
        keyword($, "ENDCASE"),
        ".",
      ),

    when_clause: ($) =>
      seq(keyword($, "WHEN"), field("condition", $._statement_tail), ".", field("body", repeat($._statement))),

    do_statement: ($) =>
      seq(keyword($, "DO"), optional($._statement_tail), ".", field("body", repeat($._statement)), keyword($, "ENDDO"), "."),

    loop_statement: ($) =>
      seq(keyword($, "LOOP"), choice(prec(1, seq(keyword($, "AT"), keyword($, "SCREEN"))), $._statement_tail), ".", field("body", repeat($._statement)), keyword($, "ENDLOOP"), "."),

    at_statement: ($) =>
      seq(
        keyword($, "AT"),
        choice(
          keyword($, "FIRST"),
          keyword($, "LAST"),
          seq(keyword($, "NEW"), field("name", $._name)),
          seq(keyword($, "END"), keyword($, "OF"), field("name", $._name)),
        ),
        optional($._statement_tail),
        ".",
        field("body", repeat($._statement)),
        keyword($, "ENDAT"),
        ".",
      ),

    class_definition: ($) =>
      seq(
        keyword($, "CLASS"),
        field("name", $._name),
        keyword($, "DEFINITION"),
        optional($._statement_tail),
        ".",
        field("body", repeat(choice($.visibility_section, $.method_signature, $.declaration_statement, $.simple_statement, $.unknown_statement))),
        keyword($, "ENDCLASS"),
        ".",
      ),

    visibility_section: ($) =>
      seq(keywordChoice($, ["PUBLIC", "PROTECTED", "PRIVATE"]), keyword($, "SECTION"), "."),

    method_signature: ($) =>
      prec(
        2,
        seq(
          keywordChoice($, ["METHODS", "CLASS-METHODS"]),
          optional(":"),
          optional($._method_signature_entries),
          ".",
        ),
      ),

    _method_signature_entries: ($) =>
      seq($._method_signature_entry, repeat(seq(",", $._method_signature_entry))),

    form_definition: ($) =>
      seq(keyword($, "FORM"), field("name", $._name), optional($._statement_tail), ".", field("body", repeat($._statement)), keyword($, "ENDFORM"), "."),

    function_definition: ($) =>
      seq(keyword($, "FUNCTION"), field("name", $._name), optional($._statement_tail), ".", field("body", repeat($._statement)), keyword($, "ENDFUNCTION"), "."),

    module_definition: ($) =>
      seq(
        keyword($, "MODULE"),
        field("name", $._name),
        optional(field("direction", keywordChoice($, ["INPUT", "OUTPUT"]))),
        ".",
        field("body", repeat($._statement)),
        keyword($, "ENDMODULE"),
        ".",
      ),

    event_block: ($) =>
      seq(
        field("name", keywordChoice($, [
          "INITIALIZATION",
          "LOAD-OF-PROGRAM",
          "START-OF-SELECTION",
          "END-OF-SELECTION",
          "TOP-OF-PAGE",
          "END-OF-PAGE",
          "AT SELECTION-SCREEN",
        ])),
        optional($._statement_tail),
        ".",
      ),

    call_statement: ($) =>
      prec(
        3,
        seq(
          keyword($, "CALL"),
          keywordChoice($, ["FUNCTION", "METHOD", "TRANSFORMATION", "SCREEN", "SELECTION-SCREEN"]),
          repeat($._call_tail_token),
          ".",
        ),
      ),

    _call_tail_token: ($) =>
      choice(
        $.call_parameter_assignment,
        keyword($, "TABLES"),
        $._sql_tail_token,
      ),

    call_parameter_assignment: ($) =>
      prec(
        2,
        seq(
          field("name", $._call_parameter_name),
          $.equals,
          field("value", $._call_parameter_value),
        ),
      ),

    _call_parameter_name: ($) =>
      choice(
        $._name,
        keywordIdentifier($, "RETURN"),
      ),

    _call_parameter_value: ($) => $._sql_tail_token,

    describe_statement: ($) =>
      prec(
        3,
        seq(
          keyword($, "DESCRIBE"),
          keyword($, "FIELD"),
          field("field", $._describe_field_operand),
          keyword($, "LENGTH"),
          field("length", $._describe_field_operand),
          keyword($, "IN"),
          keyword($, "CHARACTER"),
          keyword($, "MODE"),
          ".",
        ),
      ),

    _describe_field_operand: ($) =>
      choice(
        $.static_type_path,
        $.field_symbol_path,
        $.field_path,
        $.dynamic_name,
        $.qualified_name,
      ),

    select_statement: ($) =>
      prec(
        1,
        seq(
          keywordChoice($, ["SELECT", "WITH"]),
          repeat1($._sql_tail_token),
          ".",
        ),
      ),

    delete_statement: ($) =>
      prec(
        3,
        seq(
          keyword($, "DELETE"),
          choice(
            $.qualified_name,
            $.field_path,
            $.field_symbol_path,
            keywordChoice($, ["TABLE", "ADJACENT"]),
          ),
          repeat($._sql_tail_token),
          ".",
        ),
      ),

    sort_statement: ($) =>
      prec(
        3,
        seq(
          keyword($, "SORT"),
          choice($.qualified_name, $.field_path, $.field_symbol_path),
          repeat($._sql_tail_token),
          ".",
        ),
      ),

    _sql_tail_token: ($) =>
      choice(
        $.static_type_path,
        $.field_symbol_path,
        $.field_path,
        $.dynamic_name,
        $.substring_expression,
        $.sql_wildcard_selector,
        $.qualified_name,
        $._literal,
        keywordChoice($, EXPRESSION_KEYWORDS),
        keywordChoice($, STATEMENT_TAIL_KEYWORDS),
        $.operator,
        $.punctuation,
        $.tail_fragment,
      ),

    submit_statement: ($) =>
      prec(
        2,
        seq(
          keyword($, "SUBMIT"),
          repeat($._submit_tail_token),
          ".",
        ),
      ),
