tree-sitter/test/corpus/regressions.txt
==================
Sort direction additions highlight as keywords
==================

SORT mt_trn BY docnum creation_time DESCENDING.
SORT mt_trn BY docnum creation_time ASCENDING.

---

(source_file
  (sort_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (qualified_name
      (identifier))
    (keyword))
  (sort_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (qualified_name
      (identifier))
    (keyword)))

==================
String normalization additions highlight as keywords
==================

CONDENSE lv_po_number NO-GAPS.
SHIFT lv_po_number LEFT DELETING LEADING '0'.

---

(source_file
  (simple_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword))
  (simple_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (keyword)
    (string)))

==================
Inline constructor rows and bare DO
==================

DATA rt_ifname TYPE range of string.
rt_ifname = VALUE #(
  ( sign = 'I' option = 'EQ' low = c_if_epcis )
  ( sign = 'I' option = 'EQ' low = c_if_pml )
).

DO.
  EXIT.
ENDDO.

---

(source_file
  (data_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (keyword)
    (qualified_name
      (identifier)))
  (assignment_statement
    (qualified_name
      (identifier))
    (constructor_expression
      (keyword)
      (argument_list
        (constructor_row
          (named_argument
            (identifier)
            (equals)
            (string))
          (named_argument
            (identifier)
            (equals)
            (string))
          (named_argument
            (identifier)
            (equals)
            (qualified_name
              (identifier))))
        (constructor_row
          (named_argument
            (identifier)
            (equals)
            (string))
          (named_argument
            (identifier)
            (equals)
            (string))
          (named_argument
            (identifier)
            (equals)
            (qualified_name
              (identifier)))))))
  (do_statement
    (keyword)
    (simple_statement
      (keyword))
      (keyword)))

==================
Dynpro SET statements and modules
==================

SET PF-STATUS '0100'.
SET TITLEBAR '0100'.
MODULE user_command_0100 INPUT.
ENDMODULE.

---

(source_file
  (set_pf_status_statement
    (keyword)
    (keyword)
    (string))
  (set_titlebar_statement
    (keyword)
    (keyword)
    (string))
  (module_definition
    (keyword)
    (identifier)
    (keyword)
    (keyword)))

==================
Append constructor option field is an identifier
==================

APPEND VALUE #(
        sign   = ls_pgid-sign
        option = ls_pgid-option
        low    = ls_pgid-low
        high   = ls_pgid-high
      ) TO lt_wadat_ist.

---

(source_file
  (simple_statement
    (keyword)
    (constructor_expression
      (keyword)
      (argument_list
        (named_argument
          (identifier)
          (equals)
          (field_path))
        (named_argument
          (identifier)
          (equals)
          (field_path))
        (named_argument
          (identifier)
          (equals)
          (field_path))
        (named_argument
          (identifier)
          (equals)
          (field_path))))
    (keyword)
    (qualified_name
      (identifier))))

==================
Append constructor source field is an identifier
==================

APPEND VALUE #(
      source = iv_source
    ) TO mt_result.

---

(source_file
  (simple_statement
    (keyword)
    (constructor_expression
      (keyword)
      (argument_list
        (named_argument
          (identifier)
          (equals)
          (qualified_name
            (identifier)))))
    (keyword)
    (qualified_name
      (identifier))))

==================
Inline NEW constructor highlights as keyword
==================

DATA(lo_inst) = NEW lcl_class( 'iv_param11111' ).

---

(source_file
  (data_declaration
    (keyword)
    (binary_expression
      (parenthesized_expression
        (qualified_name
          (identifier)))
      (constructor_expression
        (keyword)
        (qualified_name
          (identifier))
        (argument_list
          (string))))))

==================
ABAP additions highlight as keywords
==================

SELECTION-SCREEN BEGIN OF BLOCK b01 WITH FRAME TITLE TEXT-001.
PARAMETERS p_dfrom TYPE sy-datum OBLIGATORY.
PARAMETERS p_dialog RADIOBUTTON GROUP r01.
DATA lv_code TYPE c LENGTH 10.
SELECTION-SCREEN END OF BLOCK b01.
IF p_dto IS INITIAL.
ENDIF.
IF p_dto IS NOT INITIAL.
ENDIF.
CLASS lcl_report DEFINITION FINAL.
ENDCLASS.

---

(source_file
  (simple_statement
    (keyword)
    (keyword)
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (keyword)
    (binary_expression
      (qualified_name
        (identifier))
      (number)))
  (parameters_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (field_path)
    (keyword))
  (parameters_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (qualified_name
      (identifier)))
  (data_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (number))
  (simple_statement
    (keyword)
    (keyword)
    (keyword)
    (keyword)
    (qualified_name
      (identifier)))
  (if_statement
    (keyword)
    (binary_expression
      (qualified_name
        (identifier))
      (keyword)
      (keyword))
    (keyword))
  (if_statement
    (keyword)
    (binary_expression
      (qualified_name
        (identifier))
      (keyword)
      (keyword)
      (keyword))
    (keyword))
  (class_definition
    (keyword)
    (identifier)
    (keyword)
    (keyword)
    (keyword)))

==================
Selection-screen additions highlight as keywords
==================

PARAMETERS: pmd_out RADIOBUTTON GROUP g1 DEFAULT 'X' USER-COMMAND rad,
            pmd_inb RADIOBUTTON GROUP g1.
PARAMETERS: pv_pth TYPE string LOWER CASE.
PARAMETERS: pmd_lcl RADIOBUTTON GROUP g2 DEFAULT 'X' MODIF ID m1.
PARAMETERS: pv_chn AS CHECKBOX DEFAULT 'X' MODIF ID m2.
AT SELECTION-SCREEN ON VALUE-REQUEST FOR pv_pth.
AT SELECTION-SCREEN OUTPUT.
LOOP AT SCREEN.
  CASE screen-group1.
    WHEN 'M1'.
      screen-active = COND i( WHEN pmd_out = abap_true THEN 1 ELSE 0 ).
      MODIFY SCREEN.
  ENDCASE.
ENDLOOP.

---

(source_file
  (parameters_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (value_tail
      (keyword)
      (string))
    (keyword)
    (qualified_name
      (identifier))
    (punctuation)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (qualified_name
      (identifier)))
  (parameters_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword))
  (parameters_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (value_tail
      (keyword)
      (string))
    (keyword)
    (keyword)
    (qualified_name
      (identifier)))
  (parameters_declaration
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (value_tail
      (keyword)
      (string))
    (keyword)
    (keyword)
    (qualified_name
      (identifier)))
  (event_block
    (keyword)
    (keyword)
    (keyword)
    (keyword)
    (qualified_name
      (identifier)))
  (event_block
    (keyword)
    (keyword))
  (loop_statement
    (keyword)
    (keyword)
    (keyword)
    (case_statement
      (keyword)
      (field_path)
      (when_clause
        (keyword)
        (string)
        (unknown_statement
          (binary_expression
            (field_path)
            (constructor_expression
              (keyword)
              (qualified_name
                (identifier))
              (argument_list
                (keyword)
                (named_argument
                  (identifier)
                  (equals)
                  (qualified_name
                    (identifier)))
                (keyword)
                (number)
                (keyword)
                (number)))))
        (simple_statement
          (keyword)
          (keyword)))
      (keyword))
    (keyword)))

==================
Call function return parameter name is an identifier
==================

CALL FUNCTION 'BAPI_DELIVERY_GETLIST' DESTINATION c_s4_dest
  TABLES
    it_vbeln           = lt_vbeln
    it_wadat_ist       = lt_wadat_ist
    it_wbstk           = lt_wbstk
    et_delivery_header = lt_delivery_header
    return             = lt_return
  EXCEPTIONS
    system_failure        = 1 MESSAGE lv_msg
    communication_failure = 2 MESSAGE lv_msg
    OTHERS                = 3.

---

(source_file
  (call_statement
    (keyword)
    (keyword)
    (string)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (call_parameter_assignment
      (identifier)
      (equals)
      (qualified_name
        (identifier)))
    (call_parameter_assignment
      (identifier)
      (equals)
      (qualified_name
        (identifier)))
    (call_parameter_assignment
      (identifier)
      (equals)
      (qualified_name
        (identifier)))
    (call_parameter_assignment
      (identifier)
      (equals)
      (qualified_name
        (identifier)))
    (call_parameter_assignment
      (identifier)
      (equals)
      (qualified_name
        (identifier)))
    (keyword)
    (call_parameter_assignment
      (identifier)
      (equals)
      (number))
    (keyword)
    (qualified_name
      (identifier))
    (call_parameter_assignment
      (identifier)
      (equals)
      (number))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (operator)
    (number)))

==================
Call and runtime additions highlight as keywords
==================

CALL FUNCTION 'JOB_OPEN'
  EXCEPTIONS
    OTHERS = 4.
SUBMIT zprog VIA JOB lv_jobname NUMBER lv_jobcount AND RETURN.
COMMIT WORK AND WAIT.
CONVERT TIME STAMP ls_srt-created_at TIME ZONE sy-zonlo INTO DATE lv_created_date TIME lv_created_time.
MESSAGE lv_msg TYPE 'I' DISPLAY LIKE 'E'.
CALL METHOD cl_soap_payload_util=>get_message_properties.
lo_value_node = CAST if_sxml_value_node( lo_node ).
SELECT status INTO @DATA(lv_status) FROM ztab.
LOOP AT so_ser INTO DATA(ls_ser).
ENDLOOP.

---

(source_file
  (call_statement
    (keyword)
    (keyword)
    (string)
    (keyword)
    (keyword)
    (operator)
    (number))
  (submit_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword))
  (simple_statement
    (keyword)
    (keyword)
    (keyword)
    (keyword))
  (simple_statement
    (keyword)
    (keyword)
    (keyword)
    (field_path)
    (keyword)
    (keyword)
    (field_path)
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier)))
  (simple_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (string)
    (keyword)
    (keyword)
    (string))
  (call_statement
    (keyword)
    (keyword)
    (static_type_path))
  (assignment_statement
    (qualified_name
      (identifier))
    (constructor_expression
      (keyword)
      (qualified_name
        (identifier))
      (argument_list
        (qualified_name
          (identifier)))))
  (select_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (operator)
    (keyword)
    (dynamic_name)
    (keyword)
    (qualified_name
      (identifier)))
  (loop_statement
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (call_expression
      (keyword)
      (argument_list
        (qualified_name
          (identifier))))
    (keyword)))

==================
Comments inside ABAP blocks
==================

FUNCTION zfoo.
*"Local Interface:
* comment
  DATA lv_value TYPE i.
ENDFUNCTION.

FORM bar USING iv_text TYPE string.
* comment
  CLEAR iv_text.
ENDFORM.

IF foo = bar.
" comment
  CLEAR foo.
ENDIF.

---

(source_file
  (function_definition
    (keyword)
    (identifier)
    (comment
      (star_comment))
    (comment
      (star_comment))
    (data_declaration
      (keyword)
      (qualified_name
        (identifier))
      (keyword)
      (qualified_name
        (identifier)))
    (keyword))
  (form_definition
    (keyword)
    (identifier)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (comment
      (star_comment))
    (simple_statement
      (keyword)
      (qualified_name
        (identifier)))
    (keyword))
  (if_statement
    (keyword)
    (binary_expression
      (qualified_name
        (identifier))
      (qualified_name
        (identifier)))
    (comment
      (line_comment))
    (simple_statement
      (keyword)
      (qualified_name
        (identifier)))
    (keyword)))

==================
Corpus-backed statement additions
==================

SELECT ebeln
  FROM ekpo
  INTO TABLE @DATA(lt_ekpo)
  FOR ALL ENTRIES IN @lt_input_po
  WHERE ebeln = @lt_input_po-ebeln.

READ TABLE lt_existing INTO ls_existing
  WITH KEY docnum = <ls_insert>-docnum
  BINARY SEARCH.

DELETE ADJACENT DUPLICATES FROM gt_db_insert COMPARING docnum.
INSERT ztt_dropout_po FROM TABLE @lt_insert ACCEPTING DUPLICATE KEYS.

CALL FUNCTION 'ZTT_ATTP_DROPOUT_PO_CHECK'
  DESTINATION iv_rfc_dest
  EXPORTING it_vendor_po = lt_vendor_po
  IMPORTING et_dropout_po_result = ct_result
  EXCEPTIONS system_failure = 1 MESSAGE lv_msg
             OTHERS = 3.

FORM add_log USING iv_message TYPE string.
ENDFORM.

---

(source_file
  (select_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (operator)
    (keyword)
    (dynamic_name)
    (keyword)
    (keyword)
    (keyword)
    (keyword)
    (operator)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (operator)
    (operator)
    (field_path))
  (simple_statement
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (binary_expression
      (qualified_name
        (identifier))
      (field_symbol_path))
    (keyword)
    (keyword))
  (delete_statement
    (keyword)
    (keyword)
    (keyword)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier)))
  (simple_statement
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (keyword)
    (host_expression
      (qualified_name
        (identifier)))
    (keyword)
    (keyword)
    (keyword))
  (call_statement
    (keyword)
    (keyword)
    (string)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (call_parameter_assignment
      (identifier)
      (equals)
      (qualified_name
        (identifier)))
    (keyword)
    (call_parameter_assignment
      (identifier)
      (equals)
      (qualified_name
        (identifier)))
    (keyword)
    (call_parameter_assignment
      (identifier)
      (equals)
      (number))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (operator)
    (number))
  (form_definition
    (keyword)
    (identifier)
    (keyword)
    (qualified_name
      (identifier))
    (keyword)
    (qualified_name
      (identifier))
    (keyword)))

==================
Corpus-backed inline declarations and loop events
==================

SELECT DISTINCT e~*
  FROM /sttp/dm_evt AS e
  INTO TABLE @DATA(lt_comm_evt)
  WHERE e~objtype IN ('2', '3').

DATA(lv_epc) = VALUE /sttp/epc1(
  content = |urn:epc:id:sgtin:{ ls_rel_itm-owner }.{ ls_rel_itm-product }.{ ls_rel_itm-serial }|
).

READ TABLE lt_rel_itm_grp ASSIGNING FIELD-SYMBOL(<fs_itm_grp>)
  WITH TABLE KEY evtid = ls_rel_itm-evtid
                 gtin = ls_rel_itm-gtin.

LOOP AT lt_rel_sscc INTO DATA(ls_rel_sscc).
  AT NEW evtid.
    CLEAR ls_obj_evt.
  ENDAT.
  AT END OF evtid.
    APPEND VALUE /sttp/epc1( content = ls_encode_epc-code_char ) TO ls_obj_evt-epc_list-epc.
  ENDAT.
ENDLOOP.

ASSIGN lo_sap_struct->* TO <ls_sap_struct>.
IF <ls_sap_struct> IS ASSIGNED.
  cv_epcis = <ls_sap_struct>.
ENDIF.

CALL TRANSFORMATION ztt_us_tl_ship_ext_trans
  SOURCE tl_ship_ext = ls_tl_ship_ext
  RESULT XML lv_sapext_xml
  OPTIONS xml_header = 'no'.

lv_trans_date = lv_event_date_str+0(8).
CONCATENATE lv_stsmp_str(8) lv_stsmp_str+8(6) INTO cv_filename.
LEAVE TO SCREEN sy-dynnr.

---
